[package]
name = "joinedtogether"
version = "0.1.0"
authors = ["Corwin Kuiper <corwin@kuiper.dev>", "Gwilym Kuiper"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
agb = { version = "0.5.0", path = "../agb/agb" }
agb_image_converter = { version = "0.4.0", path = "../agb/agb-image-converter" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 2
